# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

bootfs_only = true

zircon_enable_kernel_debugging_features = true
zircon_enable_netsvc_debugging_features = true

# TODO(ZX-4706): Kernel/userboot not properly handling case where cmdline is completely empty or
# missing, so a dummy argument that nothing uses is added for now.
kernel_cmdline_args = [
    "driver.intel_hda.log=+trace,+spew",
    "driver.intel_i2c.log=+trace",
    "driver.max98373.log=+trace",
    "driver.max98927.log=+trace,+spew",
    "bootsvc.next=bin/component_manager,fuchsia-boot:///#meta/root.cm,--use-builtin-process-launcher"
]

meta_package_labels = [ "//build/images:config-data" ]

base_package_labels = []

cache_package_labels = []

universe_package_labels = [
  "//garnet/tools/vboot_reference:cgpt_host",
  "//garnet/tools/vboot_reference:futility_host",
]
