# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("storage") {
  deps = [
    "chunked-compression",
    "chunked-compression:chunked-compress-host",
    "ext4",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "blobfs-corrupt:tests",
    "chunked-compression:tests",
    "conformance:tests",
    "ext4:tests",
  ]
}
