# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")
import("//build/rust/rustc_binary.gni")
import("//build/rust/rustc_library.gni")

rustc_binary("devhost") {
  name = "devhost"
  with_unit_tests = true
  edition = "2018"

  deps = [
    "//src/ddk/fuchsia-ddk-sys",
    "//garnet/public/lib/fidl/rust/fidl",
    "//garnet/public/rust/fdio",
    "//garnet/public/rust/fuchsia-async",
    "//garnet/public/rust/fuchsia-runtime",
    "//garnet/public/rust/fuchsia-syslog",
    "//garnet/public/rust/fuchsia-zircon",
    "//third_party/rust_crates:libc",
    "//third_party/rust_crates:failure",
    "//third_party/rust_crates:futures-preview",
    "//third_party/rust_crates:lazy_static",
    "//third_party/rust_crates:log",
    "//zircon/public/fidl/fuchsia-device:fuchsia-device-rustc",
    "//zircon/public/fidl/fuchsia-device-manager:fuchsia-device-manager-rustc",
    "//zircon/public/fidl/fuchsia-io:fuchsia-io-rustc",
  ]

  # force_opt = "z"
  # with_lto = "fat"
}

# This manifest is consumed by the ZBI rule in //build/images to add the experimental devhost to bootfs.
generate_manifest("devhost.bootfs") {
  deps = [
    ":devhost",
  ]

  args = [ "--entry=bin/devhost2=" +
           rebase_path("$root_build_dir/devhost", root_build_dir) ]
}
