# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("chan5") {
  deps = [
    ":chan5_bin",
  ]

  binaries = [
    {
      name = "chan5"
      shell = true
    },
  ]

  meta = [
    {
      path = rebase_path("meta/chan5.cmx")
      dest = "chan5.cmx"
    },
  ]
}

executable("chan5_bin") {
  output_name = "chan5"

  sources = [
    "chan5.cc",
    "chan5.h",
    "main.cc",
  ]

  deps = [
    "//garnet/public/lib/fsl",
    "//src/lib/fxl",
    "//sdk/fidl/fuchsia.media",
    "//sdk/lib/sys/cpp",
    "//zircon/public/lib/async-loop-cpp",
    "//zircon/public/lib/fit",
  ]
}
