# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/toolchain.gni")
import("//build/rust/rustc_staticlib.gni")

rustc_staticlib("rust") {
  edition = "2018"
  deps = [
    #"//garnet/public/banjo/ddk-protocol-serial:ddk-protocol-serial-rustc",
    "//zircon/public/banjo/ddk-protocol-platform-device:ddk-protocol-platform-device-rustc",
    "//garnet/public/rust/fuchsia-zircon",
    "//garnet/public/rust/fuchsia-ddk/fuchsia-ddk-sys",
    "//garnet/public/rust/fuchsia-app",
    "//garnet/public/rust/fuchsia-async",
    "//garnet/public/rust/fuchsia-syslog",
    "//third_party/rust-crates/rustc_deps:failure",
    "//third_party/rust-crates/rustc_deps:futures-preview",
    "//third_party/rust-crates/rustc_deps:log",
    "//third_party/rust-crates/rustc_deps:parking_lot",
  ]
  non_rust_deps = []

  public = [
    "rust.h",
  ]
}

