# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/toolchain.gni")
import("//build/rust/rustc_staticlib.gni")

rustc_staticlib("rust") {
  edition = "2018"
  deps = [
    "//zircon/public/banjo/ddk-protocol-platform-device:ddk-protocol-platform-device-rustc",
    "//zircon/public/banjo/ddk-protocol-gpio:ddk-protocol-gpio-rustc",
    "//zircon/public/fidl/fuchsia-hardware-light:fuchsia-hardware-light-rustc",
    "//garnet/public/lib/fidl/rust/fidl",
    "//garnet/public/rust/fuchsia-zircon",
    "//garnet/public/rust/fuchsia-ddk",
    "//third_party/rust-crates/rustc_deps:libc",
    "//third_party/rust-crates/rustc_deps:failure",
    "//third_party/rust-crates/rustc_deps:futures-preview",
    "//third_party/rust-crates/rustc_deps:parking_lot",
  ]
  non_rust_deps = []

  public = [
    "rust.h",
  ]
}

