# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rustc_library.gni")

rustc_library("fuchsia-ddk") {
  with_unit_tests = true
  edition = "2018"
  deps = [
    "//garnet/public/rust/fuchsia-ddk/fuchsia-ddk-sys",
    "//garnet/public/rust/fuchsia-ddk/fuchsia-ddk-macro",
    "//third_party/rust-crates/rustc_deps:libc",
    "//garnet/public/rust/fuchsia-zircon",
  ]
}
