# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")
import("//build/rust/rustc_binary.gni")
import("//build/test/test_package.gni")
import("//build/testing/environments.gni")

rustc_binary("bin") {
  name = "rust_audio_stream"
  edition = "2018"
  with_unit_tests = true

  deps = [
    "//garnet/public/lib/fidl/rust/fidl",
    "//garnet/public/rust/fdio",
    "//garnet/public/rust/fuchsia-async",
    "//garnet/public/rust/fuchsia-component",
    "//garnet/public/rust/fuchsia-syslog",
    "//garnet/public/rust/fuchsia-zircon",
    "//sdk/fidl/fuchsia.media:fuchsia.media-rustc",
    "//sdk/fidl/fuchsia.mediacodec:fuchsia.mediacodec-rustc",
    "//src/media/lib/fuchsia-media",
    "//third_party/rust_crates:failure",
    "//third_party/rust_crates:futures-preview",
    "//third_party/rust_crates:log",
    "//third_party/rust_crates:parking_lot",
  ]
}

package("rust-audio-stream") {
  deps = [
    ":bin",
  ]

  binary = "rust_crates/rust_audio_stream"

  meta = [
    {
      path = rebase_path("meta/rust-audio-stream.cmx")
      dest = "rust-audio-stream.cmx"
    },
  ]
}

test_package("tests") {
  package_name = "rust-audio-stream-tests"

  deps = [
    ":bin_test",
  ]

  tests = [
    {
      name = "rust_audio_stream_bin_test"
      dest = "rust-audio-stream-unittests"
      environments = basic_envs
    },
  ]
}
