# Copyright 2019 The Fuchsia Authors
#
# Use of this source code is governed by a MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT

zx_library("acpi_tables") {
  kernel = true
  sources = [ "acpi_tables.cc" ]
  public_deps = [
    # <lib/acpi_tables.h> has #include <arch/x86/apic.h>.
    "$zx/kernel/arch/x86:headers",
  ]

  # TODO: testonly
  deps = [
    ":test",
    "$zx/kernel/lib/acpi_lite",
  ]
}

source_set("test") {
  # TODO: testonly = true
  sources = [ "acpi_tables_test.cc" ]
  deps = [
    ":acpi_tables.headers",
    "$zx/kernel/lib/acpi_lite",
    "$zx/kernel/lib/unittest",
  ]
}
