# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("midiecho") {
  sources = [
    "midiecho.cc",
  ]
  deps = [
    "$zx/system/fidl/fuchsia-hardware-midi:llcpp",
    "$zx/system/ulib/fbl",
    "$zx/system/ulib/fdio",
    "$zx/system/ulib/zircon",
  ]
}
