# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

driver("msm8x53-som") {
  sources = [
    "msm8x53.cpp",
    "msm8x53-gpio.cpp",
  ]
  deps = [
    "$zx/system/banjo/ddk-protocol-gpio",
    "$zx/system/banjo/ddk-protocol-gpioimpl",
    "$zx/system/banjo/ddk-protocol-platform-bus",
    "$zx/system/banjo/ddk-protocol-platform-device",
    "$zx/system/banjo/ddk-protocol-scpi",
    "$zx/system/dev/lib/mmio",
    "$zx/system/dev/lib/msm8x53",
    "$zx/system/ulib/ddk",
    "$zx/system/ulib/ddktl",
    "$zx/system/ulib/fbl",
    "$zx/system/ulib/hwreg",
    "$zx/system/ulib/zircon",
    "$zx/system/ulib/zx",
    "$zx/system/ulib/zxcpp",
  ]
  data_deps = [
    "$zx/kernel/target/arm64/boot-shim:msm8x53-som",
  ]
}
