# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

driver("vim3l") {
  sources = [
    "vim3l.cpp",
  ]
  deps = [
    "$zx/system/banjo/ddk.protocol.platform.bus",
    "$zx/system/ulib/ddk",
    "$zx/system/ulib/ddktl",
    "$zx/system/ulib/fbl",
  ]
  data_deps = [
    "$zx/kernel/target/arm64/boot-shim:vim3l",
  ]
}
