# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("$zx/public/gn/firmware.gni")

driver("qcom-pil") {
  sources = [
    "binding.cpp",
    "qcom-pil.cpp",
  ]
  data_deps = [
    ":firmware",
  ]
  deps = [
    "$zx/system/banjo/ddk-protocol-platform-bus",
    "$zx/system/banjo/ddk-protocol-platform-device",
    "$zx/system/ulib/ddk",
    "$zx/system/ulib/ddktl",
    "$zx/system/ulib/sync",
    "$zx/system/ulib/zircon-internal",
    "$zx/system/ulib/fzl",
]
}

firmware("firmware") {
  sources = [
    "$firmware_dir/adsp.mbn",
  ]
}
