# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("test") {
  testonly = true
  deps = [ ":zbitl-unittests" ]
}

test("zbitl-unittests") {
  sources = [
    "fd-tests.cc",
    "file-tests.h",
    "json-tests.cc",
    "view-tests.cc",

    # TODO(49438): "item-tests.cc",
    # TODO(49438): "stdio-tests.cc",
  ]
  deps = [
    "$zx/../third_party/rapidjson",
    "$zx/system/ulib/zxtest",
    "..",
  ]
  if (is_fuchsia) {
    sources += [
      # TODO(49438): "vmo-tests.cc"
    ]
    deps += [
      # TODO(49438): "$zx/system/ulib/fdio", # allnfmh
      "$zx/system/ulib/zx",
    ]
  }
}
